--- a/src/style.css
+++ b/src/style.css
@@ -14,8 +14,8 @@ body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
         Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-    color: #212121;
-    background-color: #fff;
+    color: #212121a8;
+    background-color: #6e6e6e9a;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
